--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <header
+      id="header"
       class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
@@ -24,21 +25,14 @@
           class="mr-6 max-[768px]:w-25 max-[768px]:h-7"
         />
         <div class="flex gap-6 max-[1440px]:hidden">
-          <div class="flex items-center gap-1">
-            <a
-              href="./cargo_transportation.html"
-              class="text-white font-medium text-xl"
-            >
-              Грузоперевозки
-            </a>
+          <a href="./cargo_transportation.html" class="flex items-center gap-1">
+            <p class="text-white font-medium text-xl">Грузоперевозки</p>
             <img src="./assets/icons/chevron.svg" alt="chevron" />
-          </div>
-          <div class="flex items-center gap-1">
-            <a href="./road_transportation.html" class="header_title"
-              >Автоперевозки</a
-            >
+          </a>
+          <a href="./road_transportation.html" class="flex items-center gap-1">
+            <p class="header_title">Автоперевозки</p>
             <img src="./assets/icons/chevron.svg" alt="chevron" />
-          </div>
+          </a>
           <p class="header_title">Расчет стоимости</p>
           <a href="./pricelist.html" class="header_title">Прайс-лист</a>
         </div>
@@ -88,24 +82,28 @@
           </div>
         </div>
         <div class="px-5">
-          <div class="flex items-center gap-1 justify-between mb-8">
-            <a
-              href="./cargo_transportation.html"
+          <a
+            href="./cargo_transportation.html"
+            class="flex items-center gap-1 justify-between mb-8"
+          >
+            <p
               class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
             >
               Грузоперевозки
-            </a>
+            </p>
             <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
-          </div>
-          <div class="flex items-center gap-1 justify-between mb-8">
-            <a
-              href="./road_transportation.html"
+          </a>
+          <a
+            href="./road_transportation.html"
+            class="flex items-center gap-1 justify-between mb-8"
+          >
+            <p
               class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem]"
             >
               Автоперевозки
-            </a>
+            </p>
             <img src="./assets/icons/chevron.svg" alt="chevron" class="mt-1" />
-          </div>
+          </a>
           <p
             class="text-white font-medium text-5xl leading-[100%] max-[768px]:text-[1.75rem] mb-8"
           >
@@ -355,20 +353,29 @@
       </div>
     </main>
     <footer
-      class="bg-[#3A3A3A] footer_section_mobile max-[768px]:pb-24 p-15 max-[768px]:px-4 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 -mt-18 max-[1440px]:px-10 max-[1440px]:-mt-5 mx-auto footer_section"
+      class="bg-[#3A3A3A] footer_section_mobile p-15 max-[768px]:px-4 max-[768px]:pb-5 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 -mt-18 max-[1440px]:px-10 max-[1440px]:-mt-5 mx-auto footer_section"
     >
       <div
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
       >
-        <img src="./assets/icons/logo.svg" alt="logo" />
+        <a href="/">
+          <img src="./assets/icons/logo.svg" alt="logo" />
+        </a>
         <div class="flex gap-3">
-          <div class="footer_icon_wrap">
+          <a href="tel:+73832305676" class="footer_icon_wrap">
             <img src="./assets/icons/phone.svg" alt="phone" />
-          </div>
-          <div class="footer_icon_wrap">
+          </a>
+          <a
+            href="https://t.me/your_telegram"
+            target="_blank"
+            class="footer_icon_wrap"
+          >
             <img src="./assets/icons/telegram.svg" alt="text" />
-          </div>
-          <div class="footer_icon_wrap bg-[#C83A36]!">
+          </a>
+          <div
+            id="arrowUp"
+            class="footer_icon_wrap bg-[#C83A36]! cursor-pointer"
+          >
             <img src="./assets/icons/arrowUpWhite.svg" alt="arrow" />
           </div>
         </div>
@@ -378,78 +385,170 @@
       >
         <div class="flex flex-col justify-between">
           <div>
-            <p
-              class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+            <a
+              href="/cargo_transportation.html"
+              class="text-[#ffffff99] hover:text-white transition-colors"
             >
-              Грузоперевозки
-            </p>
+              <p
+                class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+              >
+                Грузоперевозки
+              </p>
+            </a>
             <ul>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки фурами
+                <a
+                  href="/cargo_transportation.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Грузоперевозки фурами</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 1,5 тонны
+                <a
+                  href="/cargo_transportation.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Грузоперевозки 1,5 тонны</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 3 тонны
+                <a
+                  href="/cargo_transportation.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Грузоперевозки 3 тонны</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 5 тонны
+                <a
+                  href="/cargo_transportation.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Грузоперевозки 5 тонны</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 10 тонны
+                <a
+                  href="/cargo_transportation.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Грузоперевозки 10 тонны</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                Грузоперевозки 20 тонны
+                <a
+                  href="/cargo_transportation.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Грузоперевозки 20 тонны</a
+                >
               </li>
             </ul>
           </div>
           <p
-            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:bottom-4"
+            class="text-[#ffffff99] space3 max-[1440px]:absolute max-[1440px]:bottom-8 max-[768px]:hidden"
           >
             © 2025, ООО АТЭК «Грузовые линии»
           </p>
         </div>
         <div>
-          <p
-            class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+          <a
+            href="/road_transportation.html"
+            class="text-[#ffffff99] hover:text-white transition-colors"
           >
-            Автоперевозки
-          </p>
+            <p
+              class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+            >
+              Автоперевозки
+            </p>
+          </a>
           <ul>
             <li class="text-white space3 font-medium mb-3">
-              Международные перевозки
+              <a
+                href="/road_transportation.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Международные перевозки</a
+              >
             </li>
             <li class="text-white space3 font-medium mb-3">
-              Междугородние перевозки
+              <a
+                href="/road_transportation.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Междугородние перевозки</a
+              >
             </li>
             <li class="text-white space3 font-medium mb-3">
-              Перевозка негабаритных грузов
+              <a
+                href="/road_transportation.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Перевозка негабаритных грузов</a
+              >
             </li>
           </ul>
         </div>
         <div>
-          <p
-            class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+          <a
+            href="/"
+            class="text-[#ffffff99] hover:text-white transition-colors"
           >
-            Разделы
-          </p>
+            <p
+              class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+            >
+              Разделы
+            </p>
+          </a>
           <ul>
-            <li class="text-white space3 font-medium mb-3">Прайс-лист</li>
-            <li class="text-white space3 font-medium mb-3">Новости</li>
-            <li class="text-white space3 font-medium mb-3">Статьи</li>
-            <li class="text-white space3 font-medium mb-3">Документы</li>
-            <li class="text-white space3 font-medium mb-3">Отзывы</li>
-            <li class="text-white space3 font-medium mb-3">Контакты</li>
+            <li class="text-white space3 font-medium mb-3">
+              <a
+                href="/pricelist.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Прайс-лист</a
+              >
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a
+                href="/news.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Новости</a
+              >
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a
+                href="/blog.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Статьи</a
+              >
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a
+                href="/documents.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Документы</a
+              >
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a
+                href="/reviews.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Отзывы</a
+              >
+            </li>
+            <li class="text-white space3 font-medium mb-3">
+              <a
+                href="/contacts.html"
+                class="text-white hover:text-[#C83A36] transition-colors"
+                >Контакты</a
+              >
+            </li>
           </ul>
         </div>
         <div class="flex flex-col justify-between max-[1024px]:hidden">
           <div class="mb-20">
-            <p
-              class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+            <a
+              href="/contacts.html"
+              class="text-[#ffffff99] hover:text-white transition-colors"
             >
-              Контакты
-            </p>
+              <p
+                class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+              >
+                Контакты
+              </p>
+            </a>
             <ul>
               <li
                 class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
@@ -458,29 +557,67 @@
                 62/1, офис 416
               </li>
               <li class="text-white space3 font-medium mb-3">
-                тел. +7 (383)230-56-76
+                <a
+                  href="tel:+73832305676"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >тел. +7 (383)230-56-76</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                230-56-77, 230-06-13
+                <a
+                  href="tel:+73832305677"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >230-56-77</a
+                >,
+                <a
+                  href="tel:+73832300613"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >230-06-13</a
+                >
               </li>
               <li class="text-white space3 font-medium mb-3">
-                e-mail: tkcargo-lines@yandex.ru
+                <a
+                  href="mailto:tkcargo-lines@yandex.ru"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >e-mail: tkcargo-lines@yandex.ru</a
+                >
               </li>
-              <li class="text-white space3 font-medium mb-3">Отзывы</li>
-              <li class="text-white space3 font-medium">Контакты</li>
+              <li class="text-white space3 font-medium mb-3">
+                <a
+                  href="/reviews.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Отзывы</a
+                >
+              </li>
+              <li class="text-white space3 font-medium">
+                <a
+                  href="/contacts.html"
+                  class="text-white hover:text-[#C83A36] transition-colors"
+                  >Контакты</a
+                >
+              </li>
             </ul>
           </div>
           <p class="text-[#ffffff99] space3 max-[1440px]:hidden">
-            Политика конфиденциальности
+            <a
+              href="/privacy.html"
+              class="text-[#ffffff99] hover:text-white transition-colors"
+              >Политика конфиденциальности</a
+            >
           </p>
         </div>
       </div>
       <div class="hidden max-[1024px]:block">
-        <p
-          class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+        <a
+          href="/contacts.html"
+          class="text-[#ffffff99] hover:text-white transition-colors"
         >
-          Контакты
-        </p>
+          <p
+            class="text-[#ffffff99] mb-4 text-xl space3 font-medium leading-7 max-[1024px]:text-lg max-[768px]:text-xl"
+          >
+            Контакты
+          </p>
+        </a>
         <ul>
           <li
             class="text-white space3 font-medium mb-3 max-w-108 max-[1440px]:max-w-60"
@@ -489,15 +626,35 @@
             62/1, офис 416
           </li>
           <li class="text-white space3 font-medium mb-3">
-            тел. +7 (383)230-56-76
+            <a
+              href="tel:+73832305676"
+              class="text-white hover:text-[#C83A36] transition-colors"
+              >тел. +7 (383)230-56-76</a
+            >
           </li>
           <li class="text-white space3 font-medium mb-3">
-            230-56-77, 230-06-13
+            <a
+              href="tel:+73832305677"
+              class="text-white hover:text-[#C83A36] transition-colors"
+              >230-56-77</a
+            >,
+            <a
+              href="tel:+73832300613"
+              class="text-white hover:text-[#C83A36] transition-colors"
+              >230-06-13</a
+            >
           </li>
           <li class="text-white space3 font-medium mb-3">
-            e-mail: tkcargo-lines@yandex.ru
+            <a
+              href="mailto:tkcargo-lines@yandex.ru"
+              class="text-white hover:text-[#C83A36] transition-colors"
+              >e-mail: tkcargo-lines@yandex.ru</a
+            >
           </li>
         </ul>
+        <p class="text-[#ffffff99] space3 hidden max-[768px]:block mt-8">
+          © 2025, ООО АТЭК «Грузовые линии»
+        </p>
       </div>
     </footer>
   </body>
